# Algorithms-Unlocked

./: .gitignore  Dockerfile  README.md  app.js  docker-compose.yml  package.json  run.cpp
2D_MATRIX_FEAR/: rotate_2D_inplace.cpp
Algorithms/: MergeKSortedArrays.cpp
Code Template/: main.cpp
Code Template/Code Template.xcodeproj/: project.pbxproj
Code Template/Code_Template/: README.md  SCRATCH.md  code.cpp  code.id0  code.id1  code.id2  code.nam  codechef.cpp  solution.cpp
Code Template/Code_Template.xcodeproj/: project.pbxproj
Code Template/Headers/: allheaders.h  constants.h  debugger.h  exception_handler.h  functions.h  logger.h  methods.h  reader.h  solution.h  static.h
Code Template/Input/: input_small_numbers.txt
Code Template/Logs/: error_log.txt
Code Template/Output/: Output_File.txt
Google_Code.xcodeproj/: project.pbxproj
Google_Code.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Source Files/Algorithms/: KLargestPoints.cpp  Knapsack.cpp  LCSProblem.cpp  LongestCommonSubString.cpp  LongestIncSubSeq.cpp  MatrixChainCost.cpp  SubSetSum.cpp  optimization.cpp  xor_range.cpp
Source Files/File Streams/: file_reader.h  file_string_process.cpp
Source Files/Misc_Examples/: MiningProfitOptimal.cpp  extract_url.cpp  readerhelper.h  youtube-dl-extract.cpp
Strings/: CMakeLists.txt  CSVReader,cpp  CSVReader.cpp  RemoveReplaceString.cpp  UnixPathParser.cpp  ValidIP_ranges.cpp  dump_template.cpp  file_string_bash_history.cpp  string_processor_tokens.cpp
go-code/: HugeFile_LargePage.go  file_io.go  go-conc-worker-pool.go  go_pool_mutex.go
(+55 files in other folders)
